# port-libsdl

./: .gitignore  README.md  all_cves.json  dependents.json  test-original.sh  validator-report.md
safe/: Cargo.toml  PORT.md  build.rs
safe/debian/: control  libsdl2-2.0-0.install  rules
safe/debian/tests/: build  cmake  deprecated-use  installed-tests
safe/docs/: unsafe-allowlist.md
safe/sdl2-test/src/: lib.rs
safe/sdl2main/src/: lib.rs
safe/src/: lib.rs  main_archive.rs
safe/src/abi/: generated_types.rs
safe/src/audio/: convert.rs  device.rs  resample.rs  stream.rs  wave.rs
safe/src/core/: assert.rs  cpuinfo.rs  error.rs  filesystem.rs  hints.rs  init.rs  libm.rs  loadso.rs  locale.rs  log.rs  memory.rs  misc.rs  mod.rs  mutex.rs  phase2_variadic_shims.c  platform.rs  power.rs  rwops.rs  stdlib.rs  system.rs  thread.rs  timer.rs
safe/src/dynapi/: generated.rs
safe/src/events/: gesture.rs  keyboard.rs  (+3 more)
safe/tests/: dependent_regressions.rs  evdev_fixtures.rs  openurl_smoke.rs  original_apps_audio.rs  original_apps_core.rs  original_apps_full.rs  original_apps_input.rs  original_apps_render.rs  original_apps_surface.rs  original_apps_video.rs  perf_workload_sanity.rs  security_bmp_parser.rs  security_gles_texture_lifecycle.rs  security_surface_math.rs  security_wave_adpcm.rs  upstream_port_all.rs  upstream_port_audio.rs  upstream_port_core.rs  upstream_port_input.rs  upstream_port_render.rs  upstream_port_surface.rs  upstream_port_video_events.rs  validator_events_timers.rs  validator_surface_render.rs  xvfb_window_smoke.rs
safe/xtask/: Cargo.toml
(+60 files in other folders)
